# arm_host

./: README.md  TODO  flash.sh
src/arm/: CMakeLists.txt  package.xml
src/arm/src/: key_teleop.cpp  kinematics.cpp  linear_motion_test.cpp  math_utils.cpp  math_utils.h  pen_circle_demo.cpp  read_string.cpp  rviz_test.cpp  serial_setup.cpp  servo_set.cpp  write.cpp
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/srv/: PosUpdate.srv  ServoUpdate.srv
src/serial_comms/: CMakeLists.txt  package.xml
src/serial_comms/src/: invkin.cpp  invkin.h  invkin_test.cpp  key_teleop.cpp  kinematics.cpp  kinematics.h  linear_motion_test.cpp  math_utils.cpp  math_utils.h  read.cpp  read_debug.cpp  serial_setup.cpp  serial_setup.h  servo_set.cpp  write.cpp
